# nqueens-by-sga

./: .editorconfig  .gitignore  README.md  pyproject.toml
nqueens/: main.py
